# mobgap

./: .env.template  .gitattributes  .gitignore  .gitlab-ci.yml  .readthedocs.yaml  .roborev.toml  .ruff.toml  AGENTS.md  CHANGELOG.md  CITATION.cff  LICENSE  McCamley_development.ipynb  NOTICE  README.md  README.rst  _tasks.py  fix_rst_headings.py  ml_test_data.pkl  pyproject.toml  pytest.ini  test_McCamley_2.ipynb  test_ml.ipynb
.agents/: refactor-policy.md
.github/ISSUE_TEMPLATE/: bug.md  general.md  new-algorithm.md
.github/workflows/: build-docs.yml  publish.yml  remove-old-artifacts.yml  test-and-lint.yml
docs/: .gitignore  conf.py  extract_with_screenshots.py  index.rst  sg_execution_times.rst
docs/blog/: 20240314_alpha_release.md  20240322_alpha_release.md  20250708_1_0.md  index.rst
docs/guides/: DMA_aggregation.md  common_datatypes.md  contribution.rst  coordinate_system.md  create_own_algorithm.rst  developer_guide.md  evaluation.rst  index.rst  project_structure.md  q_and_a.md  signal_based_dmos.md  weartime_model_selection.md
docs/modules/: aggregation.rst  cad.rst  cadence.rst  data.rst  data_transform.rst  gait_sequencens.rst  gait_sequences.rst  gsd.rst  icd.rst  index.rst  initial_contacts.rst  laterality.rst  lrc.rst  lrd.rst  orientation_estimation.rst  pipeline.rst  plotting.rst  re_orientation.rst  signal_based.rst  stride_length.rst  turning.rst  walking_speed.rst  wba.rst  weartime.rst
docs/sphinxext/: githublink.py
docs/templates/: class.rst  class_with_private.rst  data.rst  function.rst  namedtuple.rst  typed_dict.rst
example_data/: README.md
example_data/data_csv/: README.md  participant_metadata.json
examples/: README.md  README.rst  TD_elgohary.py  TurningDetection.py  driver.prj  driver.py  package.sh  turning_detection.py
examples/aggregation/:  _98_dma_agg_pipeline_weartime_no_exc.py  README.rst  _01_mobilised_aggregator.py  _02_threshold_check.py  _03_sdmo_aggregator.py  _98_dma_agg_pipeline_weartime_no_exc.py  _99_cvs_agg_pipeline_no_exc.py
examples/cad/: README.rst  _01_cad_from_ic.py
examples/cadence/: _01_cad_from_ic.py  _02_cad_evaluation.py
examples/data/: README.rst  _01_loading_example_data.py  _02_working_with_ref_data.py  _03_dmo_data.py  _04_tvs_data_no_exc.py  _05_custom_datasets.py
examples/data_transform/: README.rst  _01_cwt_filter.py  _01_gaussian.py  _01_generic_data_transforms.py  _01_resample.py  _01_savgol_filter.py  _02_filter.py  _03_resample.py  _04_cwt_filter.py  _05_gaussian.py  _05_gaussian_smoothing.py  _06_savgol_filter.py
examples/dev_guides/: README.rst  _01_pretrained_models.py
examples/gait_sequences/: README.rst  _01_gsd_iluz.py  _02_gsd_ionescu.py  _03_gsd_evaluation.py  _04_gsd_evaluation_challenges.py  _05_tvs_evaluation_no_exc.py
examples/gsd/: README.rst  _01_gsd_iluz.py  _02_gsd_adaptive_ionescu.py  _02_gsd_b.py  _02_gsd_evaluation.py  _02_gsd_ionescu.py  _02_gsd_pi.py  _03_dmo_evaluation_on_wb_level.py  _03_gsd_evaluation.py  _04_dmo_evaluation_on_wb_level.py  _04_gsd_performance_index.py
examples/icd/: README.rst  _01_icd_ionescu.py  _02_shin_algo.py  _03_hklee_algo.py  _04_icd_evaluation.py
examples/initial_contacts/: README.rst  _01_icd_ionescu.py  _02_shin_algo.py  _03_hklee_algo.py  _04_icd_evaluation.py
examples/laterality/: _01_lrc_mccamley.py  _02_lrc_ullrich.py  _03_lrc_benmansour.py  _03_lrc_mansour.py  _99_lrc_evaluation.py
examples/lrc/: README.rst  _01_lrc_mccamley.py  _01_mccamley.py  _02_lrc_ullrich.py  _99_lrc_evaluation.py  _99_lrd_evaluation.py
examples/lrd/: README.rst  _01_mccamley.py  _99_lrd_evaluation.py
examples/pipeline/: README.rst  _01_gs_iterator.py  _02_full_pipeline.py  _02_step_by_step_mobilised_pipeline.py  _03_dmo_evaluation_on_wb_level.py  _03_preconfigured_mobilised_pipelines.py  _04_dmo_evaluation_on_wb_level.py  _04_full_pipeline_evaluation.py
examples/re_orientation/: README.rst  _01_re_orientation.py
examples/reorientation/: _reorientation.py
examples/signal_based/: README.rst  _01_signal_based.py  _01_signal_based_algorithms.py  _02_signal_based_mobilised_pipeline.py
examples/sl/: _01_sl_zijlstra.py
examples/stride_length/: README.rst  _01_sl_zijlstra.py  _02_sl_evaluation.py
examples/turn_detection/: _01_td_elgohary.py
examples/turning/: README.rst  _01_td_elgohary.py
examples/wba/: README.rst  _01_assembling_wbs.py
examples/weartime/: README.rst  _01_wtd_megaritis_signal.py  _02_wtd_megaritis_xgboost.py  _03_wtd_megaritis_cnn.py
gaitlink/: TurningDetection.py  TurningDetection_NoCat.py  __init__.py  _docutils.py  bb.py  consts.py  turning_detection.py
gaitlink/CADB_CADC/: CADENCE.py  ICD_CAD.py  example_GSD_CAD.py  example_ICD_CAD.py  groupfind.py  hklee_algo_improved.py  resampInterp.py  shin_algo_improved.py  zerocros.py
gaitlink/Reorientation/: CorrectOrientationSensorAxes.py  CorrectSensorOrientationDynamic.py  filteringsignals_100Hz.py  utils.py  utils_rot.py
gaitlink/TD/: README.md  TurningDetectionv3.py  Turning_Driver.m  driver.m  driver.prj  driver.py  package.sh
gaitlink/aggregation/: __init__.py  _mobilised_aggregator.py  _threshold_check.py  base.py
gaitlink/cad/: __init__.py  _cad_from_ic.py  base.py
gaitlink/data/: __init__.py  _dataset_from_data.py  _example_data.py  _mobilised_cvs_dmo_dataset.py  _mobilised_matlab_loader.py  _mobilsed_weartime_loader.py  _utils.py  base.py  random.py  randomized.py
gaitlink/data_transform/: __init__.py  _cwt.py  _cwt_filter.py  _filter.py  _gaussian_filter.py  _padding.py  _random.py  _resample.py  _savgol_filter.py  _utils.py  base.py
gaitlink/gsd/: __init__.py  _gsd_b.py  _gsd_iluz.py  _gsd_pi.py  base.py  evaluation.py  post_processing.py  validation.py
gaitlink/gsd_b/: example_gsd_b.py  gsd_b.py
mobgap/: __init__.py  consts.py  plotting.py
revalidation/: .ruff.toml  README.md  README.rst  _utils.py
scripts/: TVS_ErrorsBlocks_vsOriginal.py  TVS_WalkingSpeed_vsOriginal.py  prepare_csv_example_data.py  prepare_tvs_dataset.py  retrain_lrc_ullrich_msproject.py
tests/: conftest.py  test_import.py  test_plotting.py
(+927 files in other folders)
